--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,16 @@
   box-sizing: border-box;
   font-family: "Roboto";
 }
+
+.app-container {
+  background-image: url("./assets/metal-background.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* color: #ffffff; */
+  /* font-family: Arial, sans-serif; */
+}
